--- a/src/sass/layouts/_headear.scss
+++ b/src/sass/layouts/_headear.scss
@@ -1,5 +1,5 @@
 header {
-  background-image: url("../../manage/images/bg-tablet-pattern.svg");
+  //  background-image: url("../../bookmark/images/icon-arrow.svg");
   background-size: 50rem;
   background-repeat: no-repeat;
   background-position: top -15em right -20rem;
