--- a/src/sass/modules/_navbar.scss
+++ b/src/sass/modules/_navbar.scss
@@ -11,13 +11,13 @@
 
 .nav {
   // img {}
-
-  @include positionElem($pos: fixed);
+  @include positionElem($pos: absolute);
   overflow: hidden;
+  z-index: 999999;
   width: 100vw;
   height: 100vh;
-  padding-top: 2em;
-  background-color: hsl(226, 90%, 12%, 0.8);
+  padding-top: 2em; // 2em;
+  // background-color: hsl(226, 90%, 12%, 0.8);
   transition: top left 0.3s;
 
   hr {
@@ -30,11 +30,8 @@
 
   .brand {
     width: 100%;
-    max-width: 350px;
-    margin: auto;
-    // border: 2px solid purple;
 
-    padding: 1em 0;
+    padding: 0em 1em;
     @include flexProps($jsfy: space-between);
 
     a > img {
@@ -48,6 +45,13 @@
     .img-wrapper {
       align-self: center;
       @include img-wrapper($w: 20px, $h: 20px);
+      @include md {
+        display: none;
+      }
+    }
+
+    @include md {
+      align-self: center;
     }
   }
 
@@ -64,9 +68,10 @@
     text-align: center;
     margin: auto;
     max-width: 350px;
-    padding: 1.5em 0;
-    @include flexProps($dir: column, $gap: 1em);
 
+    padding: 1.5em 0;
+
+    display: none;
     a {
       color: $white;
       letter-spacing: 0.1em;
@@ -107,12 +112,21 @@
     @include md {
       border: none;
       font-size: initial;
+
       @include custom-button($color: $soft-red);
+      button {
+        background: $soft-red !important;
+        padding: 0.5rem;
+        border: none;
+        &:hover {
+          color: $soft-red;
+          background: transparent !important;
+        }
+      }
     }
 
     @include md {
       @include flexProps($gap: 1em, $jsfy: end, $algn: center);
-      border: 1px solid coral;
       max-width: initial;
       padding: initial;
       flex: 1;
@@ -145,5 +159,31 @@
     @include md {
       @include flexProps($jsfy: space-between);
     }
+  }
+}
+
+.nav-on-small {
+  @extend .nav;
+
+  @include positionElem($pos: fixed);
+  svg g {
+    path {
+      fill: $white;
+      @include md {
+        fill: $dark-blue;
+      }
+    }
+  }
+
+  padding-top: 1em;
+  background-color: hsl(226, 90%, 12%, 0.8);
+
+  .brand {
+    max-width: 350px;
+    margin: auto;
+  }
+
+  .nav-links {
+    @include flexProps($dir: column, $gap: 1em);
   }
 }
